--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@vercel/postgres": "^0.5.0",
-    "next": "13.5.4",
+    "next": "^13.4.19",
     "react": "^18",
     "react-dom": "^18",
     "zod-form-data": "^2.0.2"
