--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@vercel/postgres": "^0.5.0",
+    "bcrypt": "^5.1.1",
     "next": "^13.4.19",
+    "next-auth": "^4.24.5",
     "react": "^18",
     "react-dom": "^18",
     "zod-form-data": "^2.0.2"
